[package]
name = "l3queue"
description = "a naive LockLess Linked Queue"
authors = ["ClSlaid <cailue@bupt.edu.cn>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
